--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MarvelFlix</title>
+    <link rel="icon" type="image" href="/images/mflixlogo.png">
   </head>
   <body>
     <div id="root"></div>
